Improves CompetenceCourse domain methods Relates with: #qubIT-Fenix-8962